Xong getall + get + add roi nha
Ps: bun ngu vkl

--- a/TanPhuocVinh/TanPhuocVinh/appsettings.json
+++ b/TanPhuocVinh/TanPhuocVinh/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TanPhuocVinh-C20E07BD-961B-4F20-998C-5C22E4D894C4;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
