--- a/TanPhuocVinh/TanPhuocVinh/ClientApp/package.json
+++ b/TanPhuocVinh/TanPhuocVinh/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.15.2",
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "jquery": "3.3.1",
     "react": "^16.0.0",
