--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ TanPhuocVinh/\.vs/TanPhuocVinh/v15/Server/sqlite3/db\.lock
 TanPhuocVinh/\.vs/
 
 TanPhuocVinh/TanPhuocVinh/Migrations/
+
+TanPhuocVinh/TanPhuocVinh/package-lock\.json
