update connection string
aaaaa duy pro

--- a/TanPhuocVinh/TanPhuocVinh/appsettings.json
+++ b/TanPhuocVinh/TanPhuocVinh/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TanPhuocVinh-C20E07BD-961B-4F20-998C-5C22E4D894C4;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=180.148.1.174,1577;Initial Catalog=TanPhuocVinh;Persist Security Info=True;User ID=duy;Password=***********;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
