--- a/TanPhuocVinh/TanPhuocVinh/appsettings.json
+++ b/TanPhuocVinh/TanPhuocVinh/appsettings.json
@@ -1,11 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=180.148.1.174,1577;Initial Catalog=TanPhuocVinh;Persist Security Info=True;User ID=duy;Password=***********;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=180.148.1.174,1577;Initial Catalog=TanPhuocVinh;Persist Security Info=True;User ID=duy;Password=123456"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+   "Logging": {
+      "LogLevel": {
+         "Default": "Warning"
+      }
+   },
+   "AllowedHosts": "*"
 }
