--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ TanPhuocVinh/\.vs/
 TanPhuocVinh/TanPhuocVinh/Migrations/
 
 TanPhuocVinh/TanPhuocVinh/package-lock\.json
+
+TanPhuocVinh/TanPhuocVinh/\.vscode/launch\.json
+
+TanPhuocVinh/TanPhuocVinh/\.vscode/tasks\.json
+
+TanPhuocVinh/TanPhuocVinh/\.vscode/
